[package]
name = "hos-extension"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
repository = "https://github.com/neo-sky/hos-tla-contracts"
license = "MIT OR Apache-2.0"
description = "Marketplace authority extension for House of Stake TLA wallets: registry-gated owner rotation and fungible-token sweep."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
defuse-wallet = { git = "https://github.com/near/intents", rev = "980c19e8b2d6ca864e01a3c2b5a9a12dd1d19683", default-features = false }
defuse-deadline = { git = "https://github.com/near/intents", rev = "980c19e8b2d6ca864e01a3c2b5a9a12dd1d19683", default-features = false, features = ["borsh", "serde", "near-contract"] }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked", "--no-abi"]
