[package]
name = "mpc-recovery"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
repository = "https://github.com/neo-sky/hos-tla-contracts"
license = "MIT OR Apache-2.0"
description = "MPC-mediated account recovery for House of Stake TLA wallets, with timelock and watcher-quorum verdict."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
hos-common = { path = "../../crates/hos-common" }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked", "--no-abi"]
