[package]
name = "hos-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
repository = "https://github.com/neo-sky/hos-tla-contracts"
license = "MIT OR Apache-2.0"
description = "Shared pure helpers for the House of Stake TLA contract suite."

[dependencies]
near-sdk = { workspace = true }
